--- a/package.json
+++ b/package.json
@@ -18,7 +18,14 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@coreui/angular": "^4.5.27",
+    "@emailjs/browser": "^3.11.0",
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.2",
+    "emailjs": "^4.0.3",
+    "hammerjs": "^2.0.8",
+    "ngx-hammerjs-carousel": "^0.0.9",
+    "ngx-hm-carousel": "^3.0.0",
     "ngx-slick-carousel": "^15.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -28,6 +35,9 @@
     "@angular-devkit/build-angular": "^15.1.2",
     "@angular/cli": "~15.1.2",
     "@angular/compiler-cli": "^15.1.0",
+    "@angular/localize": "^15.1.0",
+    "@types/bootstrap": "^5.2.8",
+    "@types/hammerjs": "^2.0.43",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
