--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.1.0",
     "@coreui/angular": "^4.5.27",
     "@emailjs/browser": "^3.11.0",
+    "@ngtools/webpack": "^16.2.8",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.2",
     "emailjs": "^4.0.3",
