--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.1.0",
     "@coreui/angular": "^4.5.27",
     "@emailjs/browser": "^3.11.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@ngtools/webpack": "^16.2.8",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.2",
@@ -29,6 +30,7 @@
     "ngx-hm-carousel": "^3.0.0",
     "ngx-slick-carousel": "^15.0.0",
     "rxjs": "~7.8.0",
+    "rxjs-interop": "^2.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
