--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "bootstrap": "^5.3.2",
     "emailjs": "^4.0.3",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.7.1",
+    "ng2-carouselamos": "^4.1.0",
     "ngx-hammerjs-carousel": "^0.0.9",
     "ngx-hm-carousel": "^3.0.0",
     "ngx-slick-carousel": "^15.0.0",
+    "owl.carousel": "^2.3.4",
     "rxjs": "~7.8.0",
     "rxjs-interop": "^2.0.0",
     "tslib": "^2.3.0",
@@ -42,6 +45,8 @@
     "@types/bootstrap": "^5.2.8",
     "@types/hammerjs": "^2.0.43",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.25",
+    "@types/owl.carousel": "^2.3.5",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
