--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "types": ["jquery", "owl.carousel"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
