--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "SoftGenics",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -22,16 +22,12 @@
     "@emailjs/browser": "^3.11.0",
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@ngtools/webpack": "^16.2.8",
+    "@nguniversal/express-engine": "^16.0.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.2",
     "emailjs": "^4.0.3",
     "hammerjs": "^2.0.8",
     "jquery": "^3.7.1",
-    "ng2-carouselamos": "^4.1.0",
-    "ngx-hammerjs-carousel": "^0.0.9",
-    "ngx-hm-carousel": "^3.0.0",
-    "ngx-slick-carousel": "^15.0.0",
-    "owl.carousel": "^2.3.4",
     "rxjs": "~7.8.0",
     "rxjs-interop": "^2.0.0",
     "tslib": "^2.3.0",
