--- a/package.json
+++ b/package.json
@@ -30,11 +30,15 @@
     "@nguniversal/express-engine": "^16.2.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.2",
+    "domino": "^2.1.6",
     "emailjs": "^4.0.3",
     "express": "^4.15.2",
+    "fs": "^0.0.1-security",
     "hammerjs": "^2.0.8",
     "jquery": "^3.7.1",
-    "owl.carousel": "^2.3.4",
+    "mock-browser": "^0.92.14",
+    "ngx-owl-carousel-o": "^16.0.0",
+    "path": "^0.12.7",
     "rxjs": "~7.8.0",
     "rxjs-interop": "^2.0.0",
     "sitemap": "^7.1.1",
@@ -52,7 +56,7 @@
     "@types/hammerjs": "^2.0.43",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.25",
-    "@types/node": "^16.11.7",
+    "@types/node": "^16.18.60",
     "@types/owl.carousel": "^2.3.5",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
